--- a/views/create.ejs
+++ b/views/create.ejs
@@ -40,7 +40,7 @@
     <a href = "notify"><i class ="fa-solid fa-bell"></i>Notifications</a>
     <a href = "messages"><i class="fa-solid fa-envelope"></i>Messages</a>
     <a href = "favourites"><i class="fa-solid fa-star"></i>Favourites</a>
-    <a href="create"><i class="fa-solid fa-plus"></i>Create</a>
+    <a href="create" class = "selected"><i class="fa-solid fa-plus"></i>Create</a>
     </div>
 
     <div class = "main-container">
