--- a/views/map.ejs
+++ b/views/map.ejs
@@ -18,7 +18,7 @@
 </div>
 <div class = "sidenav">
     <a href = "/"><i class="fa-solid fa-home"></i>Home</a>
-    <a href = "map" ><i class="fa-solid fa-map"></i>Explore</a>
+    <a href = "map" class = "selected"><i class="fa-solid fa-map"></i>Explore</a>
     <% if (userID) { %>
     <a href = "notify"><i class ="fa-solid fa-bell"></i>Notifications</a>
     <a href = "messages"><i class="fa-solid fa-envelope"></i>Messages</a>
