Fixed creation of post, slight mobile compatibility, and major settings changes such as username, password, etc.

--- a/src/stylesheet/mobile.css
+++ b/src/stylesheet/mobile.css
@@ -62,8 +62,11 @@
         display: none;
     }
 
-    .main-container{
-        padding-left: 5%;
-        width: 95%;
+    .settings-container {
+        width:90%;
+    }
+
+    .main-container .account-container {
+        width: 90%;
     }
 }
