--- a/src/stylesheet/pc.css
+++ b/src/stylesheet/pc.css
@@ -256,7 +256,7 @@ html{
     border-radius: 0 0 1em 1em;
 }
 
-.main-container img {
+.main-container .post img {
     width: 100%;
     height:55%;
     min-height:30em;
@@ -266,151 +266,254 @@ html{
     background-color: rgb(207, 207, 207);
 }
 
-.main-container button {
+.main-container .post button {
     border: none;
     width:100%;
     border-radius: 1em;
 }
 
-.main-container button:hover {
+.main-container .post button:hover {
     transform: scale(1.01);
     box-shadow: 0 5px 5px 0 var(--loginHover);
 }
 
-.main-container button:active {
+.main-container .post button:active {
     box-shadow: 0 0 0 0 var(--loginHover);
+}
+
+.main-container .file-form{
+    width: 50%;
 }
 
 .main-container .file-container{
-    width:100%;
-}
-
-.main-container .file-upload {
-    width: 100%;
-    height: 20rem;
     display: flex;
-    justify-content: center;
-    align-self: center;
-    background-color: var(--sidenavBackground);
-    border-radius: 10px;
-    outline: 1px solid var(--outline);
-}
-
-.main-container .file-upload button label {
-    width: 100%;
-    height: 100%;
-    padding: 1em 3em;
-}
-
-.main-container .file-upload button {
-    align-self: flex-end;
-    margin: 1em;
-    padding: 1em 0em;
-    border: 1px solid var(--outline);
-    background-color: var(--sidenavBackground);
-    color: var(--textColour);
-    border-radius: 5em;
-    font-size: 1em;
-    z-index: 1;
-}
-
-.main-container .file-upload button:hover {
-    box-shadow: 0 5px 5px 0 var(--loginHover);
-}
-
-.main-container .file-upload button:active {
-    box-shadow: 0 0 0 0 var(--loginHover);
-}
-
-.main-container .file-upload {
-    position: relative;
-    width: 100%;
-    height: 20rem;
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    background-color: var(--sidenavBackground);
-    border-radius: 10px;
-    outline: 1px solid var(--outline);
-    z-index: 1;
-}
-
-.main-container .file-upload img {
-    position: absolute;
-    width: 80%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.main-container .information {
-    display: none;
-    flex-direction: row;
-    height: 5em;
-    width:100%;
-    animation: fade-down 1s;
-    z-index: 0;
-}
-
-.main-container .information .stack {
-    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     flex-direction: column;
-    width:100%;
+    width: 100%;
+    height:80vh;
+    background-color: var(--sidenavBackground);
+    outline: 1px solid var(--outline);
+    border-radius: 1em;
 }
 
-.main-container .information .stack input {
+.main-container .file-container .image-container{
+    width: 80%;
+    height: 55%;
+    border-radius: 0 0 1em 1em;
+    outline: 1px solid var(--outline);
+    overflow: hidden;
+    background-color: var(--postBackground);
+}
+
+.main-container .file-container .image-container img{
     width: 100%;
     height: 100%;
-    max-height: 100%;
-    border: none;
-    background-color: var(--sidenavBackground);
-    font-size: 1em;
-    padding-left: 0.5em;
+    object-fit: cover;
+    border-radius: 0 0 1em 1em;
 }
 
-.main-container .information .description{
-    width:100%;
-}
-
-.main-container .information .description textarea {
-    width: 100%;
-    height: 100%;
-    border: none;
-    background-color: var(--sidenavBackground);
-    padding: 1em;
-    font-size: 1em;
-}
-
-.main-container .file-container .button-container
-{
+.main-container .file-container .image-container form {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100%;
     width: 100%;
-    margin-top: 1em;
+}
+.main-container .file-container button{
+    border:none;
+    padding:1em;
+    border-radius: 50em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -100%);
+    background-color: var(--navbarColour);
+    outline: 1px solid var(--outline);
 }
 
-.main-container .file-container .button-container button {
-    display:none;
-    padding: 1em 2em;
-    border: 1px solid var(--outline);
-    background-color: var(--sidenavBackground);
-    color: var(--textColour);
-    border-radius: 5em;
-    font-size: 1em;
-    animation: fade-down 1s;
+.main-container .file-container button[type="submit"]{
+    position: absolute;
+    top: 82.5%;
+    background-color: var(--sidenavSelected);
+    outline: 1px solid var(--outline);
 }
 
-.main-container .file-container .button-container button:hover {
+.main-container .file-container button:hover{
     box-shadow: 0 5px 5px 0 var(--loginHover);
 }
 
-.main-container .file-container .button-container button:active {
-    box-shadow: 0 0 0 0 var(--loginHover);
+.main-container .text-input-container{
+    display:flex;
+    flex-direction: row;
+    width:100%;
+    height: fit-content;
+    margin-bottom: 5em;
 }
 
-.main-container .map{
-    background-color: red;
-    height: 20rem;
+.main-container .text-input-container .information-container{
+    width:50%;
+    height: 100%;
+    margin: 0 0 0 10%;
+    margin-right: 1em;
+}
+
+.main-container .text-input-container .description-container {
+    width:50%;
+    height: 100%;
+    margin: 0 10% 0 0;
+}
+
+.main-container .text-input-container .information-container .stack {
+    height: fit-content;
+}
+
+.main-container .text-input-container .information-container input[type="text"]{
     width: 100%;
+    border-radius: 1em;
+    border: 1px solid var(--outline);
+    padding: 1em 1em;
+    margin-top:0.5em;
+}
+
+.main-container .text-input-container .description-container textarea{
+    width: 100%;
+    height: calc(100% - 0.5em);
+    border-radius: 1em;
+    border: 1px solid var(--outline);
+    padding: 1em 1em;
+    margin-top:0.5em;
+}
+
+.main-container .account-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    height:80vh;
+    background-color: var(--sidenavBackground);
+    outline: 1px solid var(--outline);
+    border-radius: 1em;
+}
+
+.main-container .account-container .account-details {
+    margin: 1em;
+    text-align: center;
+}
+
+.main-container .account-container .account-details h3{
+    margin-top:0.5em;
+}
+
+.main-container .account-container .account-details .profile-picture {
+    font-size: 3em;
+    width: 100%;
+}
+
+.main-container .account-stats-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap:5em;
+    margin-top:0.25em;
+    margin-left: 0;
+}
+.main-container .account-container .settings-icon-container {
+    width:100%;
+}
+.main-container .account-container .settings-icon-container button {
+    border: none;
+    background-color: transparent;
+    margin: 1em 1em;
+}
+
+.main-container .account-container .settings-icon-container .fa-solid {
+    font-size: 2em;
+}
+
+.main-container .account-container .settings-icon-container .fa-solid:hover {
+    text-shadow: 0em 0em 1em var(--loginHover);
+    animation: rotate 2.5s infinite linear;
+}
+
+.main-container .account-container .preview-container{
+    margin-top:1em;
+    background-color: var(--postBackground);
+    outline: 1px solid var(--outline);
+    border-radius: 0.5em;
+    height: 55%;
+    width: 75%;
+}
+
+.main-container .post-preview {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1em;
+    padding: 1em;
+}
+
+.main-container .post-preview .post {
+    outline: 1px solid var(--outline);
+    width: 100%;
+    height: 100%;
+}
+
+.main-container .post-preview .post img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0.5em;
+}
+
+.main-container .post-preview:hover {
+    transform: scale(1.01);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 1em;
+}
+
+.main-container .preview-container .no-post-preview  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.main-container .settings-container {
+    height: 80vh;
+    background-color: var(--sidenavBackground);
+    outline: 1px solid var(--outline);
+    border-radius: 1em;
+    display: flex;
+}
+
+.main-container .settings-container .settings-title {
+    position: absolute;
+    left: 50%;
+    margin-top: 1em;
+    transform: translateX(-50%);
+}
+
+.main-container .settings-container .settings {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width:50%;
+    margin-left: 0.5%;
+}
+
+.main-container .settings-container .settings .settings-option {
+    padding:1em;
+    min-height: 6em;
+    width: 100%;
+    border-bottom: 1px solid var(--outline);
+}
+
+.main-container .settings-container .settings .settings-option:last-child {
+    border-bottom: none;
 }
 
 @media screen and (min-width: 786px) {
@@ -425,7 +528,16 @@ html{
     .sidenav {
         display: block;
     }
+
+    .settings-container {
+        width:50%;
+    }
+
+    .main-container .account-container {
+        width: 50%;
+    }
 }
+
 @keyframes fade-down {
     from {
         opacity: 0;
@@ -434,6 +546,15 @@ html{
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
     }
 }
 
