--- a/src/stylesheet/pc.css
+++ b/src/stylesheet/pc.css
@@ -270,6 +270,7 @@ html{
     border: none;
     width:100%;
     border-radius: 1em;
+    cursor: pointer;
 }
 
 .main-container .post button:hover {
@@ -443,7 +444,7 @@ html{
     outline: 1px solid var(--outline);
     border-radius: 0.5em;
     height: 55%;
-    width: 75%;
+    width: 70%;
 }
 
 .main-container .post-preview {
@@ -455,17 +456,64 @@ html{
     padding: 1em;
 }
 
-.main-container .post-preview .post {
+.main-container .post-preview .post-item {
     outline: 1px solid var(--outline);
     width: 100%;
     height: 100%;
+    border-radius: 0.5em;
+    max-height: 9.5em;
+    min-height: 9.5em;
 }
 
-.main-container .post-preview .post img {
+.main-container .preview-container .post-preview .post-item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 0.5em;
+}
+
+.main-container .preview-container .post-preview .post-item h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.main-container .preview-container .hover-container {
+    z-index: 5;
+    opacity: 0;
+    width: 35%;
+    height: 44%;
+    top: 45%;
+    border-radius: 0 0 0.5em 0.5em;
+    position: absolute;
+}
+
+.main-container .preview-container .hover-container h3{
+    top: 75%;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    color: rgb(255, 255, 255);
+}
+
+.main-container .preview-container .hover-container .arrow {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(180deg);
+    width: 2em;
+    height: 1em;
+    background-color: white;
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    animation: arrow-animation 2.5s infinite;
+}
+
+.main-container .preview-container .hover-container:hover {
+    z-index: 1;
+    background: linear-gradient(to bottom, #00000000 60%, #00000076 100%);
+    animation: fade-in 0.5s;
+    opacity: 0.85;
 }
 
 .main-container .post-preview:hover {
@@ -487,6 +535,12 @@ html{
     outline: 1px solid var(--outline);
     border-radius: 1em;
     display: flex;
+}
+
+.main-container .preview-container button{
+    border:none;
+    width: 100%;
+    height: 100%;
 }
 
 .main-container .settings-container .settings-title {
@@ -558,3 +612,23 @@ html{
     }
 }
 
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 0.8;
+    }
+}
+
+@keyframes arrow-animation {
+    0% {
+        top: 85%;
+    }
+    50% {
+        top: 90%;
+    }
+    100% {
+        top: 85%;
+    }
+}
