--- a/src/stylesheet/pc.css
+++ b/src/stylesheet/pc.css
@@ -46,15 +46,21 @@ html{
     align-items: center;
 }
 
-.navbar .search-container {
+.search-container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 25%;
+}
+
+.search-container form {
+    width: 100%;
 }
 
 .search-container input[type="text"] {
-    width: 30em;
+    width: 100%;
     height: 2em;
     border-radius: .25em;
     outline: 1px solid var(--outline); 
@@ -76,6 +82,9 @@ html{
     align-items: center;
     justify-content: flex-end;
     margin-right: 1em;
+    right: 0;
+    position: absolute;
+    top: 25%;
 }
 
 .navbar ul a {
@@ -273,6 +282,18 @@ html{
     cursor: pointer;
 }
 
+.main-container .post .viewProfile {
+    display: inline;
+    width: 100%;
+    display: flex;
+    margin-right: 0.5em;
+}
+
+.main-container .post .viewProfile:hover {
+    transform: scale(1.1);
+    box-shadow: none
+}
+
 .main-container .post button:hover {
     transform: scale(1.01);
     box-shadow: 0 5px 5px 0 var(--loginHover);
@@ -411,6 +432,33 @@ html{
     width: 100%;
 }
 
+.main-container .account-container .account-details .profile-picture #outline {
+    position: absolute;
+    font-size: 2.1em;
+    z-index: 1;
+    left:51%;
+    top: 20.65%;
+    color: var(--navbarColour);
+}
+
+.main-container .account-container .account-details .profile-picture #inner {
+    position: absolute;
+    font-size: 1em;
+    z-index: 1;
+    left:51.5%;
+    top: 21.4%;
+    color: var(--navbarColour);
+}
+
+.main-container .account-container .account-details .profile-picture .fa-gear {
+    position: absolute;
+    font-size: 1.8em;
+    z-index: 2;
+    left:51.11%;
+    top: 20.9%;
+    color: rgb(0, 0, 0);
+}
+
 .main-container .account-stats-container{
     display: flex;
     justify-content: center;
@@ -535,6 +583,7 @@ html{
     outline: 1px solid var(--outline);
     border-radius: 1em;
     display: flex;
+    justify-content: center;
 }
 
 .main-container .preview-container button{
@@ -555,7 +604,7 @@ html{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width:50%;
+    width:45%;
     margin-left: 0.5%;
 }
 
@@ -568,6 +617,17 @@ html{
 
 .main-container .settings-container .settings .settings-option:last-child {
     border-bottom: none;
+}
+
+.main-container .settings-container .settings-back-button button{
+   border: none;
+   background-color: transparent;
+   margin: 1em -1.5em;
+   position: absolute;
+}
+
+.main-container .settings-container .settings-back-button button:hover {
+    animation: arrow-left 2.5s infinite;
 }
 
 @media screen and (min-width: 786px) {
@@ -630,5 +690,17 @@ html{
     }
     100% {
         top: 85%;
+    }
+}
+
+@keyframes arrow-left {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-0.25em);
+    }
+    100% {
+        transform: translateX(0);
     }
 }
