--- a/src/stylesheet/pc.css
+++ b/src/stylesheet/pc.css
@@ -46,35 +46,6 @@ html{
     align-items: center;
 }
 
-.search-container {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    margin-top: auto;
-    margin-bottom: auto;
-    width: 25%;
-}
-
-.search-container form {
-    width: 100%;
-}
-
-.search-container input[type="text"] {
-    width: 100%;
-    height: 2em;
-    border-radius: .25em;
-    outline: 1px solid var(--outline); 
-    border: none;
-    font-size: 1em;
-    padding: 0 2em;
-    margin-right:25em;
-}
-
-.search-container i {
-    position: absolute;
-    top:2em;
-    transform: translateX(50%);
-}
 
 .navbar ul {
     list-style-type: none;
@@ -87,11 +58,54 @@ html{
     top: 25%;
 }
 
-.navbar ul a {
+.navbar ul a, .navbar .icon {
     margin: 0 1em;
     font-size: 2.5em;
     color: var(--textColour);
 }
+
+.navbar .dropdown {
+    position: relative;
+    display: inline-block;
+    
+}
+
+.navbar .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--navbarColour);
+    min-width: 5em;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 100%;
+}
+.navbar .dropdown-content a {
+    color: var(--textColour);
+    font-size: 1em;
+    text-decoration: none;
+    display: block;
+    margin-left: 0;
+    width: 100%;
+    text-align: center;
+    padding: 0.5em;
+}
+
+.navbar .dropdown-content a:hover {
+    background-color: var(--sidenavHover);
+}
+
+.navbar .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.navbar .dropdown button {
+    border: none;
+    background-color: transparent;
+}
+
+
 
 .tooltip {
     position: relative;
@@ -301,6 +315,16 @@ html{
 
 .main-container .post button:active {
     box-shadow: 0 0 0 0 var(--loginHover);
+}
+
+.main-container .post .adminOptions{
+    position: absolute;
+    right: 25.5%;
+    top: 14%;
+}
+
+.main-container .post .adminOptions:hover {
+    transform: scale(1.1);
 }
 
 .main-container .file-form{
