--- a/src/stylesheet/pc.css
+++ b/src/stylesheet/pc.css
@@ -13,6 +13,8 @@
 
 body {
     background-color: var(--backgroundColour);
+    height: 100%;
+
 }
 
 * {
@@ -29,13 +31,13 @@ html{
 .navbar {
     z-index: 99;
     top: 0;
-    height: 5em;
     width: 100%;
     background-color: var(--navbarColour);
     border-bottom: 1px solid var(--outline);
     display: flex;
     position: fixed;
     justify-items: flex-end;
+    transition: top 0.3s;
 }
 
 .navbar h1 {
@@ -66,8 +68,7 @@ html{
 
 .navbar .dropdown {
     position: relative;
-    display: inline-block;
-    
+    display: inline-block;  
 }
 
 .navbar .dropdown-content {
@@ -104,8 +105,6 @@ html{
     border: none;
     background-color: transparent;
 }
-
-
 
 .tooltip {
     position: relative;
@@ -181,149 +180,143 @@ html{
 }
 
 .main-container {
-    margin: 6.5em 0;
+    margin: 4em 0;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.main-container #post-container{
-    width:100%;
-    justify-self: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.main-container .post {
-    display: flex;
-    justify-content: flex-start;
-    align-items: top;
-    outline: 1px solid var(--outline);
-    border-radius: 1em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    flex-direction: column;
-    margin-bottom: 2em;
-    width: 45%;
-    height:50%;
-}
-
-.main-container .post-header {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 5em;
-    width: 100%;
-    border-bottom: 1px solid var(--outline);
-}
-
-.main-container .post-content {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+.main-container #post-container {
     height: 100%;
-    width: 70%;
-    flex-direction: column;
+    border-right: 2px solid var(--outline);
+    border-left: 2px solid var(--outline);
+    align-self: flex-start;
 }
 
-.main-container .post-header-upper {
-    margin: 1em;
-    display: inline-flex;
+.main-container #post-container button {
+    border: none;
+    background-color: transparent;
+    width: flex-end;
+    max-height: 32.5em;
+    width: 100%;
+}
+
+.main-container #post-container .post {
+    width: flex-end;
+    max-height: 32.5em;
+    width: 100%;
+    border-bottom: 2px solid var(--outline);
+}
+
+.main-container #post-container .post:first-child {
+    border-top: none;
+}
+
+.main-container #post-container .post .post-header {
+    display: flex;
+    height: fit-content;
     align-items: center;
-    margin-bottom: 0em;
 }
 
-.main-container .post-header-lower {
-    margin: 2.5em;
-    display: inline-flex;
-    align-items: center;
-    margin-top: 0em;
-}
-
-.main-container .profile-picture {
-    width: fit-content;
-    justify-self: center;
-    margin-right: 1em;
-}
-
-.main-container .fa-solid  {
+.main-container #post-container .post .post-header .profile-picture {
     font-size: 1.5em;
-    color: rgb(0, 0, 0);
+    margin: 0.5em 0;
+    height: 100%;
+    color: var(--textColour);
+    display: flex;
+    align-items: center;
+    margin-left: 2%;
 }
 
-.main-container .carInformation {
-    font-size: 0.8em;
-    color: rgb(85, 85, 85);
+.main-container #post-container .post .post-header .profile-picture img {
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: 50%;
+}
+
+.main-container #post-container .post .post-header .post-header-content {
+    width: 50%;
+}
+
+.main-container #post-container .post .post-header .post-header-content .stack{
+    display: flex;
+    width: 100%;
+    margin-left: 0.5em;
+    align-self: start;
+    margin-top: 0.75em;
+    align-items: flex-start;
+}
+
+.main-container #post-container .post .post-header .post-header-content .stack .profile-name {
+    font-size: 1em;
+}
+
+.main-container #post-container .post .post-header .post-header-content .stack .post-information {
+    font-size: 0.7em;
     margin-left: 0.5em;
 }
 
-.main-container .post-header-lower p {
-    text-align: left;
-    font-size: 0.75em;
-    color: rgb(146, 146, 146);
+.main-container #post-container .post .post-header .post-header-content .stack .description {
+    font-size: 0.8em; 
+    margin-top: -0.5em;
+    height: 1em;
 }
 
-.main-container .post-date {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+.main-container #post-container .post .post-header .post-date {
+    margin-left: auto;
+    margin-right: 2%;
     height: 100%;
-    width: 30%;
-    margin: -1em;
-    color: rgb(85, 85, 85);
-    font-size: 0.75em;
+    align-self: flex-end;
+    font-size: 0.7em;
+    margin-bottom: 0.25em;
 }
 
-.main-container .post-image {
-    border-radius: 0 0 1em 1em;
-}
-
-.main-container .post img {
-    width: 100%;
-    height:55%;
-    min-height:30em;
-    max-height:30em;
-    object-fit: contain;
-    border-radius: 0 0 1em 1em;
-    background-color: rgb(207, 207, 207);
-}
-
-.main-container .post button {
-    border: none;
-    width:100%;
+.main-container #post-container .post .image-container {
+    margin: 1em;
+    max-height: 25em;
     border-radius: 1em;
-    cursor: pointer;
-}
-
-.main-container .post .viewProfile {
-    display: inline;
-    width: 100%;
+    background-color: var(--outline);
+    border: 2px solid var(--outline);
     display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.main-container #post-container .post .image-container img {
+    min-width: 100%;
+    min-height: 100%;
+    border-radius: 1em;
+}
+
+.main-container #post-container .post .extras-content {
+    margin-left: 1.5em;
+    margin-top: -1em;
+    font-size: 1em;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 2em;
+}
+
+.main-container #post-container .post .extras-content .item {
     margin-right: 0.5em;
+    display: flex;
+    align-items: center;
 }
 
-.main-container .post .viewProfile:hover {
-    transform: scale(1.1);
-    box-shadow: none
+.main-container #post-container .post .extras-content .item p {
+    margin-top: 0.9em;
+    color: grey;
+    font-size: 0.7em;
 }
 
-.main-container .post button:hover {
-    transform: scale(1.01);
-    box-shadow: 0 5px 5px 0 var(--loginHover);
+.main-container #post-container .post button {
+    margin-left: 1em;
+    width: fit-content;
 }
 
-.main-container .post button:active {
-    box-shadow: 0 0 0 0 var(--loginHover);
-}
-
-.main-container .post .adminOptions{
-    position: absolute;
-    right: 25.5%;
-    top: 14%;
-}
-
-.main-container .post .adminOptions:hover {
+.main-container #post-container .post button:hover {
     transform: scale(1.1);
 }
 
@@ -332,6 +325,7 @@ html{
 }
 
 .main-container .file-container{
+    margin: 2.5em;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -354,9 +348,10 @@ html{
 
 .main-container .file-container .image-container img{
     width: 100%;
-    height: 100%;
+    height:100%;
     object-fit: cover;
     border-radius: 0 0 1em 1em;
+    background-color: rgb(207, 207, 207);
 }
 
 .main-container .file-container .image-container form {
@@ -370,12 +365,6 @@ html{
     border:none;
     padding:1em;
     border-radius: 50em;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -100%);
-    background-color: var(--navbarColour);
-    outline: 1px solid var(--outline);
 }
 
 .main-container .file-container button[type="submit"]{
@@ -432,6 +421,7 @@ html{
 }
 
 .main-container .account-container {
+    margin: 2.5em;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -602,6 +592,7 @@ html{
 }
 
 .main-container .settings-container {
+    margin: 2.5em;
     height: 80vh;
     background-color: var(--sidenavBackground);
     outline: 1px solid var(--outline);
@@ -673,6 +664,19 @@ html{
 
     .main-container .account-container {
         width: 50%;
+    }
+
+    #post-container {
+        width: 50%;
+    }
+
+    .navbar {
+        height: 4em;
+    }
+
+    .navbar img{
+        width: 100%;
+        height: 100%;
     }
 }
 
