--- a/views/account.ejs
+++ b/views/account.ejs
@@ -11,7 +11,9 @@
 </head>
 
 <div class = "navbar">
-    <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+    <div class = "web-logo">
+        <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+    </div>
     <div class="search-container"></div>
 </div>
 
