--- a/views/create.ejs
+++ b/views/create.ejs
@@ -11,7 +11,9 @@
 </head>
 
 <div class = "navbar">
-    <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+    <div class = "web-logo">
+        <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+    </div>
     <div class="search-container">
     </div>
 
@@ -44,26 +46,26 @@
     </div>
 
     <div class = "main-container">
-        <form class = "file-form" action="/create" method="POST" enctype="multipart/form-data">
+        <form class = "file-form" action="/create" method="POST" enctype="multipart/form-data" onsubmit="submit.disabled = true">
             <div class = "file-container">
-                <div class = "image-container">
-                        <input type="file" id="img" name="img" accept="image/png, image/jpg" style="display:none;" onchange="loadFile(event)" required>
-                        <img id="output" name="output" style="display:none">
-                        <button type="button"><label for="img" id = "button-img">Select an Image</label></button>
+            <div class = "image-container">
+                <input type="file" id="img" name="img" accept="image/png, image/jpg" style="display:none;" onchange="loadFile(event)" required>
+                <img id="output" name="output" style="display:none">
+                <button type="button"><label for="img" id = "button-img">Select an Image</label></button>
+            </div>
+            <div class = "text-input-container">
+                <div class = "information-container">
+                <div class = "stack">
+                    <input type="text" id="carModel" name="carModel" placeholder="Car Model" required>
+                    <input type="text" id="carName" name="carName" placeholder="Car Name" required>
+                    <input type="text" id="location" name="location" placeholder="Car Location">
                 </div>
-                <div class = "text-input-container">
-                    <div class = "information-container">
-                        <div class = "stack">
-                            <input type="text" id="carModel" name="carModel" placeholder="Car Model" required>
-                            <input type="text" id="carName" name="carName" placeholder="Car Name" required>
-                            <input type="text" id="location" name="location" placeholder="Car Location">
-                        </div>
-                    </div>
-                    <div class = "description-container">
-                        <textarea id="description" name="description" rows="1" cols="50" maxlength="75" placeholder="Enter description here..." style="resize: none;"></textarea>
-                    </div>
                 </div>
-                    <button type="submit" id="submit">Submit</button>
+                <div class = "description-container">
+                <textarea id="description" name="description" rows="1" cols="50" maxlength="75" placeholder="Enter description here..." style="resize: none;"></textarea>
+                </div>
+            </div>
+            <button type="submit" id="submit" name = "submit">Submit</button>
             </div>
         </form>
     </div>
