--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -11,7 +11,9 @@
 </head>
 <body style="overflow-y: hidden;">
 <div class = "navbar">
-    <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+    <div class = "web-logo">
+        <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+    </div>
     <div class="search-container">
     </div>
 
