--- a/views/viewPost.ejs
+++ b/views/viewPost.ejs
@@ -12,56 +12,73 @@
 
 <body>
 <div class = "navbar">
-    <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+    <div class = "web-logo">
+        <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+    </div>  
     <div class="search-container">
     </div>
 </div>
 
+<form action = "/account/<%=post.usernameID%>" method = "GET" id = "viewAccount" name = "viewAccount">
 <div class = "main-container">
-    <div class = "post-container">
-        <div class = "post" style="width:100%">
+    <div id = "post-container" style="width: 90%; min-height: 100vh;">
+        <div class = "post">
             <div class = "post-header">
-                    <% if (admin == true || postOwner == true) { %>
-                        <div class = "adminOptions">
-                            <form action = "/deletePost/<%=post._id%>" method = "POST">
-                                <button class = "deletePost">
-                                    <div class = "tooltip">
-                                        <i class="fa-solid fa-trash"></i>
-                                        <span class = "tooltiptext">Delete Post</span>
-                                    </div>
-                                </button>
-                            </form>     
+                <% if (admin == true || postOwner == true) { %>
+                    <div class = "adminOptions">
+                        <form action = "/deletePost/<%=post._id%>" method = "POST">
+                            <button class = "deletePost">
+                                <div class = "tooltip">
+                                    <i class="fa-solid fa-trash"></i>
+                                    <span class = "tooltiptext">Delete Post</span>
+                                </div>
+                            </button>
+                        </form>     
+                    </div>
+                <% } %>
+                <button for = "viewAccount">
+                    <div class = "profile-picture">
+                        <img src="assets/tyler.jpg" alt="">
+                    </div>
+                </button>
+              <div class = "post-header-content">
+                  <div class = "stack">
+                    <button for = "viewAccount">
+                        <div class = "profile-name">
+                            <h5><%=post.username%></h5>
                         </div>
-                    <% } %>
+                    </button>
+                      <div class = "post-information">
+                          <p>- <%=post.carModel%>, <%=post.carTitle%></p>
+                      </div>
+                  </div>
+                  <div class = "stack">
+                      <div class = "description">
+                          <p><%=post.description%></p>
+                      </div>
+                  </div>
+              </div>
+              <div class = "post-date">
+                <p><%=post.date%></p>
+              </div>
+            </div>
+            <div class = "image-container" style="min-height: 80vh;">
+                <img src="<%=post.photo%>" alt="">
+            </div>
 
-                <div class = "post-content">
-                    <div class = "post-header-upper">
-                        <form action = "/account/<%=post.usernameID%>" method = "GET">
-                            <div class = "tooltip">
-                                <button class = "viewProfile">
-                                    <div class="profile-picture">
-                                            <i class="fa-solid fa-circle-user"></i> 
-                                    </div>
-                                    <h3><%=post.username%></h3>
-                                </button>
-                                    <span class = "tooltiptext">View Profile</span>
-                            </div>
-                        </form>
-                            <p class = "carInformation"><%=post.carModel%>,<%=post.carTitle%></p>
-                    </div>
-                    <div class = "post-header-lower">
-                        <p><%=post.description%></p>
-                    </div>
+                <div class = "extras-content">
+                  <div class = "item">
+                    <i class="fas fa-heart"></i>
+                    <p><%=post.likes%></p>
+                  </div>
+                  <div class = "item">
+                    <i class="fas fa-star"></i>
+                    <p>3</p>
+                  </div>
                 </div>
-                <div class = "post-date">
-                    <p><%=post.date%></p>
-                </div>
-            </div>
-            <div class = "post-image">
-                <img src = <%=post.photo%> alt = "Pagani Zonda F">
-            </div>
         </div>
-    </div>
+    </div>  
 </div>
+</form>
 </body>
 </html>
