--- a/src/stylesheet/pc.css
+++ b/src/stylesheet/pc.css
@@ -299,6 +299,22 @@ html{
     height: 2em;
 }
 
+.main-container #post-container .post .extras-content input {
+    display: none;
+    width: 2em;
+}
+
+.main-container #post-container .post .extras-content label {
+    width: 2em;
+    height:100%;
+    display: flex;
+    align-items: center;
+}
+
+.main-container #post-container .post .extras-content label:hover {
+    transform: scale(1.1);
+}
+
 .main-container #post-container .post .extras-content .item {
     margin-right: 0.5em;
     display: flex;
@@ -309,15 +325,6 @@ html{
     margin-top: 0.9em;
     color: grey;
     font-size: 0.7em;
-}
-
-.main-container #post-container .post button {
-    margin-left: 1em;
-    width: fit-content;
-}
-
-.main-container #post-container .post button:hover {
-    transform: scale(1.1);
 }
 
 .main-container .file-form{
@@ -441,36 +448,26 @@ html{
     margin-top:0.5em;
 }
 
-.main-container .account-container .account-details .profile-picture {
+.main-container .account-container .account-details .profile-picture-container {
     font-size: 3em;
     width: 100%;
+    height:0.75em;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
-.main-container .account-container .account-details .profile-picture #outline {
-    position: absolute;
-    font-size: 2.1em;
-    z-index: 1;
-    left:51%;
-    top: 20.65%;
-    color: var(--navbarColour);
+.main-container .account-container .account-details .profile-picture-container .profile-picture {
+    width: 1.5em;
+    height: 1.5em;
+    margin-top: -0.5em;
 }
 
-.main-container .account-container .account-details .profile-picture #inner {
-    position: absolute;
-    font-size: 1em;
-    z-index: 1;
-    left:51.5%;
-    top: 21.4%;
-    color: var(--navbarColour);
-}
-
-.main-container .account-container .account-details .profile-picture .fa-gear {
-    position: absolute;
-    font-size: 1.8em;
-    z-index: 2;
-    left:51.11%;
-    top: 20.9%;
-    color: rgb(0, 0, 0);
+.main-container .account-container .account-details .profile-picture-container .profile-picture img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    outline: 1px solid var(--outline);
 }
 
 .main-container .account-stats-container{
@@ -501,12 +498,10 @@ html{
 }
 
 .main-container .account-container .preview-container{
-    margin-top:1em;
     background-color: var(--postBackground);
     outline: 1px solid var(--outline);
     border-radius: 0.5em;
-    height: 55%;
-    width: 70%;
+    width: 100%;
 }
 
 .main-container .post-preview {
@@ -516,6 +511,9 @@ html{
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1em;
     padding: 1em;
+    justify-content: center;
+    align-content: center;
+    position: relative;
 }
 
 .main-container .post-preview .post-item {
@@ -542,13 +540,14 @@ html{
 }
 
 .main-container .preview-container .hover-container {
-    z-index: 5;
     opacity: 0;
-    width: 35%;
-    height: 44%;
-    top: 45%;
-    border-radius: 0 0 0.5em 0.5em;
     position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5em;
+    transform: scale(0.99);
 }
 
 .main-container .preview-container .hover-container h3{
@@ -580,7 +579,6 @@ html{
 
 .main-container .post-preview:hover {
     transform: scale(1.01);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 1em;
 }
 
@@ -677,6 +675,15 @@ html{
     .navbar img{
         width: 100%;
         height: 100%;
+    }
+
+    .main-container .account-container .preview-container {
+        width: 75%;
+        height: 55%;
+    }
+
+    .main-container .account-container .preview-container .image-container {
+        height:45%;
     }
 }
 
