--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,9 +14,11 @@
         <img src = "assets/CARSPOTTERIMG.png">
         <form action="/register" method="POST">
             <h1 class = "login-header">Welcome!</h1>
-            <% if (error) { %>
-                <p class="error"><%= error %></p>
-            <% } %>
+            <div class = "login-error">
+                <% if (error) {%>
+                    <p class="error"><%= error %></p>
+                <% } %>
+            </div>
 
             <input id = "username" name = "username" type = "username" placeholder = "Username" required <% if (error) { %>style="outline: 1px solid rgb(153, 0, 0);"<% } %>>
             <input id = "email" name = "email" type = "email" placeholder = "Email" required <% if (error) { %>style="outline: 1px solid rgb(153, 0, 0);"<% } %>>
